ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-connect-timeout":"10","nginx.ingress.kubernetes.io/proxy-http-version":"1.1","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600"},"labels":{"app.kubernetes.io/managed-by":"kustomize","app.kubernetes.io/name":"uniops-ingress","ap [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  creationTimestamp: "2026-05-28T11:42:36Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: uniops-ingress
    app.kubernetes.io/part-of: uniops
  name: uniops-ingress
  namespace: uniops-dev
  resourceVersion: "14287"
  uid: e8e3550c-79fd-4f9e-ad17-3faf6dd42a81
spec:
  rules:
  - host: uniops.local
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              name: http
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              name: http
        path: /ws
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              name: http
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: frontend
            port:
              name: http
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.110.10.131
